--- a/ruby/sinatra/html/dailyReport.html
+++ b/ruby/sinatra/html/dailyReport.html
@@ -175,6 +175,8 @@
 									<option value="1009">Z张丹丹</option>
 									<option value="1010">A敖思博</option>
 									<option value="1011">Z赵敏</option>
+									<option value="1012">L刘京爱</option>
+									<option value="1013">C陈若曦</option>
 								</select>
 								&rarr;	查看我的全部日志:  <input type="button" id='view_my_dr' onClick='view_my_dr();' value='>GO<'>
 							</td>
