继续删除无用文件 修改部分文件 状态是开发中

--- a/ruby/sinatra/html/datapool.html
+++ b/ruby/sinatra/html/datapool.html
@@ -160,7 +160,7 @@
 			
 			<a href='/new_id'>获取一个线上的身份证</a>
 			<br>
-			<a href='/new_phone'>Get a online phone number</a>
+			<a href='/new_phone'></a>
 			<br>
 			<a href='/clear_id'>Clear the online ID card</a>
 			<br>
