--- a/ruby/sinatra/html/index.html
+++ b/ruby/sinatra/html/index.html
@@ -57,7 +57,7 @@
 		<div align="center" style="margin-top: 50px;">
 			<font face="Calibri" size="36">欢迎来到EZB质量团队!</font>
 			<br>
-			<font face="Calibri" size="4" color="#345633">我们很牛X</font>
+			<font face="Calibri" size="4" color="#345633">神兵利器</font>
 			<p> </p>
 			<table class="layout">
 				<tr>
@@ -69,7 +69,7 @@
 				</tr>
 
 				<tr>
-					<td class="td_link">&hearts;</td><td><a class="a_link" href="/atr">Automation Test Report</a></td>
+					<td class="td_link">&hearts;</td><td><a class="a_link" href="/atr">测试报告</a></td>
 				</tr>
 				
 			</table>
